--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "start:prod": "set NODE_ENV=production&&nodemon server.js"
+    "start": "nodemon src/server.js",
+    "start:prod": "set NODE_ENV=production&&nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
